[package]
name = "transit_web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
askama = "0.14.0"
askama-derive-axum = "0.1.2"
axum = "0.8.4"
chrono = "0.4.41"
chrono-tz = "0.10.3"
dotenvy = "0.15"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }


axum-core = "*" 
http = "*"
